minor update to support firefox

--- a/src/App.css
+++ b/src/App.css
@@ -37,7 +37,7 @@ h1 {
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-  width: fit-content;
+  width: moz-fit-content;
 }
 
 .search {
